--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/games/Overwatch2.html">Overwatch</a></li>
-      <li><a href="/games/Fortnite.html">Fortnite</a></li>
-      <li><a href="/games/Valorant.html">Valorant</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="./games/Fortnite.html">Fortnite</a></li>
+      <li><a href="./games/Overwatch2.html">Overwatch</a></li>
+      <li><a href="./games/Valorant.html">Valorant</a></li>
+      <li><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
 
