--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <link rel="shortcut icon" href="./img/GameIcon.png" type="img/png" />
   </head>
   <header>
-    <img src="/img/GameIcon.png" alt="Game logo" />
+    <img src="./img/GameIcon.png" alt="Game logo" />
     <h1>My favorite games</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/games/Overwatch2.html">Overwatch</a></li>
-      <li><a href="/games/Fortnite.html">Fortnite</a></li>
-      <li><a href="/games/Valorant.html">Valorant</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="./games/Overwatch2.html">Overwatch</a></li>
+      <li><a href="./games/Fortnite.html">Fortnite</a></li>
+      <li><a href="./games/Valorant.html">Valorant</a></li>
+      <li><a href="./contact.html">Contact</a></li>
     </ul>
   </nav>
 
