--- a/games/Fortnite.html
+++ b/games/Fortnite.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My favorite games | Fortnite</title>
     <!--Logo not working-->
-    <link rel="shortcut icon" href="/img/FortniteIcon.png" type="img/png" />
+    <link rel="shortcut icon" href="../img/FortniteIcon.png" type="img/png" />
   </head>
   <header>
-    <img src="/img/FortniteIcon.png" alt="Fornite logo" />
+    <img src="../img/FortniteIcon.png" alt="Fornite logo" />
     <h1>Fortnite</h1>
   </header>
 
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/games/Overwatch2.html">Overwatch2</a></li>
-      <li><a href="/games/Fortnite.html">Fortnite</a></li>
-      <li><a href="/games/Valorant.html">Valorant</a></li>
-      <li><a href="/contact.html">Contact</a></li>
+      <li><a href="./Overwatch2.html">Overwatch2</a></li>
+      <li><a href="./Fortnite.html">Fortnite</a></li>
+      <li><a href="./Valorant.html">Valorant</a></li>
+      <li><a href="../contact.html">Contact</a></li>
     </ul>
   </nav>
 
