--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <nav>
     <ul>
-      <li><a href="./">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
       <li><a href="./games/Fortnite.html">Fortnite</a></li>
       <li><a href="./games/Overwatch2.html">Overwatch</a></li>
       <li><a href="./games/Valorant.html">Valorant</a></li>
