--- a/games/Overwatch2.html
+++ b/games/Overwatch2.html
@@ -14,7 +14,7 @@
 
   <nav>
     <ul>
-      <li><a href="../">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="./Overwatch2.html">Overwatch2</a></li>
       <li><a href="./Fortnite.html">Fortnite</a></li>
       <li><a href="./Valorant.html">Valorant</a></li>
